[gd_scene load_steps=2 format=3 uid="uid://bvxqnp8nvwxjd"]

[ext_resource type="Script" path="res://ui/panels/ComparativeInfoPanel.gd" id="1"]

[node name="ComparativeInfoPanel" type="PanelContainer"]
anchors_preset = 11
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -400.0
offset_top = 20.0
offset_right = -20.0
offset_bottom = -20.0
script = ExtResource("1")

[node name="VBox" type="VBoxContainer" parent="."]
layout_mode = 2
theme_override_constants/separation = 8

[node name="Header" type="HBoxContainer" parent="VBox"]
layout_mode = 2

[node name="TitleLabel" type="Label" parent="VBox/Header"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 20
text = "Structure Comparison"

[node name="ClearButton" type="Button" parent="VBox/Header"]
layout_mode = 2
text = "Clear All"
tooltip_text = "Clear all selections (Esc)"

[node name="HSeparator" type="HSeparator" parent="VBox"]
layout_mode = 2

[node name="ScrollContainer" type="ScrollContainer" parent="VBox"]
layout_mode = 2
size_flags_vertical = 3

[node name="ContentVBox" type="VBoxContainer" parent="VBox/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 12

[node name="StructureContainer" type="VBoxContainer" parent="VBox/ScrollContainer/ContentVBox"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="RelationshipContainer" type="VBoxContainer" parent="VBox/ScrollContainer/ContentVBox"]
layout_mode = 2
theme_override_constants/separation = 4